--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Carousel</a>
+          <a class="navbar-brand" href="index.html">Pacific Trails Resort</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -43,10 +43,10 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="reservations.html">Reservation</a>
               </li>
             </ul>
           </div>
@@ -90,7 +90,7 @@
                   Ocean
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Sign up today</a>
+                  <a class="btn btn-lg btn-primary" href="#">Learn More</a>
                 </p>
               </div>
             </div>
@@ -119,7 +119,7 @@
                   activities, including hiking, kayaking, and bird watching.
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Browse gallery</a>
+                  <a class="btn btn-lg btn-primary" href="#">Learn More</a>
                 </p>
               </div>
             </div>
