--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
             data-bs-slide-to="2"
             aria-label="Slide 3"
           ></button>
+          <button
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide-to="3"
+          aria-label="Slide 4"
+        ></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -90,7 +96,7 @@
                   Ocean
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Learn More</a>
+                  <a class="btn btn-lg btn-primary" href="#heading1">Learn More</a>
                 </p>
               </div>
             </div>
@@ -105,7 +111,7 @@
                   ground. Each yurt has water and electricity, and is fully
                   furnished.
                 </p>
-                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="#heading2">Learn more</a></p>
               </div>
             </div>
           </div>
@@ -119,11 +125,28 @@
                   activities, including hiking, kayaking, and bird watching.
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Learn More</a>
+                  <a class="btn btn-lg btn-primary" href="#heading3">Learn More</a>
                 </p>
               </div>
             </div>
           </div>
+          <div class="carousel-item">
+            <img src="images/beach.jpg" alt="beach image" />
+            <div class="container">
+              <div class="carousel-caption text-end">
+                <h1>Reserve your spot.</h1>
+                <p>
+                  Secure a spot a one of our special package deals with a program that the entire family will enjoy. (Photo by Cristina Cerda on Unsplash)
+                </p>
+                <p>
+                  <a class="btn btn-lg btn-primary" href="reservations.html">Reserve Now</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+          
         </div>
         <button
           class="carousel-control-prev"
@@ -166,7 +189,7 @@
               California North Coast with panoramic views of the Pacific Ocean
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#heading1">View details &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -185,7 +208,7 @@
               furnished.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#heading2">View details &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -203,7 +226,7 @@
               activities, including hiking, kayaking, and bird watching.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#heading3">View details &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -214,7 +237,7 @@
 
         <hr class="featurette-divider" />
 
-        <div class="row featurette">
+        <div class="row featurette" id="heading1">
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">
               Enjoy nature in luxury.
@@ -239,7 +262,7 @@
 
         <hr class="featurette-divider" />
 
-        <div class="row featurette">
+        <div class="row featurette" id="heading2">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading fw-normal lh-1">
               Our Yurts.
@@ -269,7 +292,7 @@
 
         <hr class="featurette-divider" />
 
-        <div class="row featurette">
+        <div class="row featurette" id="heading3">
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">
               Go back to nature.
